# internship

./: .gitignore  README.md  RESUME.md  pyproject.toml
aggreguard/: .gitignore  AggreGuard_项目计划.md  README.md  __init__.py  config.py  guard.py  pyproject.toml
aggreguard/eval/: demo.py  detection_analysis.py
aggreguard/integrations/: agentdojo_defense.py
aggreguard/middleware/: action_gate.py  aggregation.py  injection_detect.py  logging.py  provenance.py  task_alignment.py
aggreguard/paper/: paper.md
aggreguard/tests/: test_aggregation.py  test_detection_analysis.py  test_injection_detect.py  test_report.py  test_sweep.py
benchmarks/: AGGREGATION_REDTEAM.md  PHASE1_FINDINGS.md
ecom-ads-optimizer/: .gitignore  README.md  analyze_ads.py  app.py  requirements.txt
ecom-product-selector/: README.md  analyze.py  app.py  ppc_analyze.py  requirements.txt
ecom-restock-planner/: .gitignore  README.md  app.py  plan.py  requirements.txt
eval/: ablation.py  aggregation_eval.py  baselines.py  compare.py  llmguard_compare.py  metrics.py  report.py  runner.py  slice.py  sweep.py
hip-fracture-agent/: .gitignore  README.md  agent.py  agent_tools.py  app.py  data_perprocessing.py  eval_framework.py  rag_pipeline.py  requirements.txt  train_model.py
paper/: aggregation_section.md  paper.md
resume/: 跨境电商-中文简历.md
tests/: test_ablation.py  test_agentdojo_integration.py  test_aggregation.py  test_aggregation_eval.py  test_guard.py  test_injection_detect.py  test_metrics.py  test_middleware.py  test_provenance.py  test_sweep.py  test_task_alignment.py
(+32 files in other folders)
